frontend/test/should_fail/delretypesame_001.grg
rule r{	n:Node;		alternative {		case1 {						modify {				delete(n);			}		}	}		modify {		m:Node<n>;	}}